<resources>
    <string name="app_name">Todo List App</string>
    <string name="enter_a_todo_item">Enter a TODO item</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="todo_icon">TODO Icon</string>
    <string name="title">Title</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_icon">delete icon</string>
</resources>